feat:minor design changes and font change

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
     <title>Friday</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.8/css/line.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 
 <body>
 
-
-
     <!-- Header -->
     <header class="header" id="header">
-        <nav class="nav container">
+        <nav class="nav container nav_prop">
             <a href="#home" class="nav__logo">
-                <img src="website-assets/gallery/friday_website_logo.webp" alt="Friday-logo" class="friday__logo">
+                <img src="assets/friday_website_logo.webp" alt="Friday-logo" class="friday__logo">
                 Friday
             </a>
 
@@ -63,18 +61,12 @@
             </div>
         </nav>
     </header>
-    
-
-
 
     <!-- Main -->
     <main class="main">
-
-
-
         <!-- Home Section -->
         <section class="home section" id="home">
-            <img src="website-assets/gallery/friday_home_image.webp" alt="taaveez_home_image" class="home__img">
+            <img src="assets/friday_home_image.webp" alt="taaveez_home_image" class="home__img">
 
             <div class="home__data">
                 <h1 class="home__title"><span>Friday</span> App</h1>
@@ -95,20 +87,15 @@
             </div>
         </section>
 
-
-
         <!-- Screenshots Section -->
         <section class="secreenshots section" id="screenshots">
             <h1 class="section__title screenshots__title">Screenshots</h1>
 
             <div class="screenshots__section">
 
-                <img src="website-assets/gallery/screenshot_1.webp" alt="screenshot_1"
-                    class="screenshots__images screenshot_1">
-                <img src="website-assets/gallery/screenshot_2.webp" alt="screenshot_2"
-                    class="screenshots__images screenshot_2">
-                <img src="website-assets/gallery/screenshot_3.webp" alt="screenshot_3"
-                    class="screenshots__images screenshot_3">
+                <img src="assets/screenshot_1.webp" alt="screenshot_1" class="screenshots__images screenshot_1">
+                <img src="assets/screenshot_2.webp" alt="screenshot_2" class="screenshots__images screenshot_2">
+                <img src="assets/screenshot_3.webp" alt="screenshot_3" class="screenshots__images screenshot_3">
 
             </div>
 
@@ -210,8 +197,6 @@
                 </div>
             </div>
         </section>
-
-
 
     </main>
 
